cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED 17)
project(mcdu VERSION 0.2 LANGUAGES C CXX)

# Find SDL2

if(MSVC)
    if(SDL2_DIR)
        set(SDL2_LIBRARY_DIRS ${SDL2_DIR}/lib/x64)
        set(SDL2_INCLUDE_DIRS ${SDL2_DIR}/include)
        set(SDL2_LIBRARIES SDL2 SDL2main)
    else()
        message(FATAL "You must set SDL2_DIR to the path of the SDL2 dev distribution")
    endif()
    if(SDL2_TTF_DIR)
        set(SDLTTF_LIBRARY_DIRS ${SDL2_TTF_DIR}/lib/x64)
        set(SDLTTF_INCLUDE_DIRS ${SDL2_TTF_DIR}/include)
        set(SDLTTF_LIBRARIES SDL2_ttf)
    else()
        message(FATAL "You must set SDL2_TTF_DIR to the path of the SDL2-ttf dev distribution")
    endif()
    if(SDL2_IMAGE_DIR)
        set(SDLIMAGE_LIBRARY_DIRS ${SDL2_IMAGE_DIR}/lib/x64)
        set(SDLIMAGE_INCLUDE_DIRS ${SDL2_IMAGE_DIR}/include)
        set(SDLIMAGE_LIBRARIES SDL2_image)
    else()
        message(FATAL "You must set SDL2_IMAGE_DIR to the path of the SDL2-image dev distribution")
    endif()
else()
    include(FindPkgConfig)
    pkg_search_module(SDL2 sdl2 REQUIRED)
    pkg_search_module(SDLTTF SDL2_ttf REQUIRED)
    pkg_search_module(SDLIMAGE SDL2_image REQUIRED)
endif()

add_subdirectory(extern)

add_library(mcdu src/config.cpp src/mcdulogic.cpp src/mcdudisplay.cpp src/mcdupage.cpp src/font.cpp src/smartlogic.cpp)
target_link_libraries (mcdu ${SDL2_LIBRARIES} ${SDLTTF_LIBRARIES} ${SDLIMAGE_LIBRARIES} sol2 lua)
target_include_directories(mcdu PUBLIC ${SDL2_INCLUDE_DIRS} ${SDLTTF_INCLUDE_DIRS} ${SDLIMAGE_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_directories(mcdu PUBLIC ${SDL2_LIBRARY_DIRS} ${SDLTTF_LIBRARY_DIRS} ${SDLIMAGE_LIBRARY_DIRS})
target_compile_features(mcdu PRIVATE cxx_delegating_constructors)

# Precision Simulator X CDU
add_subdirectory(libpsx)
add_subdirectory(psx)

# Generic Hoppie/ACARS CDU (incomplete)
add_subdirectory(hoppie)
